--- a/Projeto/style.css
+++ b/Projeto/style.css
@@ -31,11 +31,13 @@ body{
   background-size: cover;
   */
   /*background: color image repeat position/size */
-  background:var(--tex-url) top center/cover
+  background:var(--tex-url) top center/cover;
+  height: 100vh;
 }
 body * {
   font-family: "Inter", sans-serif;
   color: var(--text-color);
+ 
 }
 #container{
   width: 100%;
@@ -78,11 +80,15 @@ body * {
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
+     animation: slide-back 0.2s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 #switch span{
   display: block;
@@ -158,9 +164,28 @@ footer {
 /* media queries */
 @media(min-width:700px){
   :root {
-    --bg-url: url (./assets/bg-mobile.jpg);
+    --bg-url: url (./assets/bg-desktop.jpg);
   }
   .light {
-    --bg-url: url (./assets/bg-mobile-light.jpg)
+    --bg-url: url (./assets/bg-desktop-light.jpg)
   }
+}
+/* animation */
+@keyframes slide-in {
+  from{
+    left: 0;
+  }
+  to{
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to{
+    left: 0;
+  } 
+  
 }
