--- a/Curso RockSeat/Meu primeiro Projeto/style.css
+++ b/Curso RockSeat/Meu primeiro Projeto/style.css
@@ -10,6 +10,7 @@
 body{
     background-image: url(assets/bg-image.png);
     background-size: cover;
+    background-color : #EAD8C5;
 }
 #page{
     box-sizing: border-box;
@@ -17,7 +18,7 @@ body{
     padding: 24px;
     background-color: #F0E8C2;
     border-radius: 24px;
-    margin: 48px auto;
+    margin: 48px auto 28px;
 }
 img{
     border-radius: 16px;
@@ -45,4 +46,13 @@ h1,h2{
 }
 ul{
     padding-left: 24px;
+}
+footer{
+    color: #F0E8C2;
+    text-align: center;
+    padding-bottom: 48px;
+}
+footer img{
+  
+    vertical-align: middle;
 }
